# PE_chess

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  chess_constants.h  coordinate.h  cpu.cpp  cpu.h  game.cpp  game.h  input.cpp  input.h  input_utils.cpp  input_utils.h  io_utils.cpp  io_utils.h  main.cpp  message.h  move.cpp  move.h  move_generator.cpp  move_generator.h  piece_type.h  rendering.cpp  rendering.h  tile.cpp  tile.h  utils.h
